<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DangKy2Act">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dangky"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtL_SDT_dk2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="100dp"
            android:hint="@string/nhapsdt"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_round_smartphone_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editT_SDT_dk2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_DK2_dk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_button"
            android:text="@string/tieptheo" />

        <TextView
            android:id="@+id/txtV_CoTK_dk2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cotk" />

    </LinearLayout>

</RelativeLayout>