<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DangNhapAct">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="-5dp"
            android:src="@drawable/khongchu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dangnhap"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtL_SDT_dn"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="40dp"
            android:hint="@string/nhapsdt"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_round_smartphone_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editT_SDT_dn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtL_MK_dn"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/nhapmk"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_round_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editT_MK_dn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/quenmk" />

        <Button
            android:id="@+id/btn_DN_dn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_button"
            android:text="@string/dangnhap" />

        <TextView
            android:id="@+id/txtV_TaoTK_dn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/chuacotk" />
    </LinearLayout>
</RelativeLayout>