<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DangKy1Act">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taotk"
            android:textSize="28dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/txtV_SDT_dk1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="hifood@gmail.com"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="80dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtL_HoTen_dk1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hovaten"
            android:layout_marginHorizontal="15dp"
            app:startIconDrawable="@drawable/ic_round_person_24"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editT_HoTen_dk1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtL_MK_dk1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nhapmk"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            app:startIconDrawable="@drawable/ic_round_lock_24"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editT_MK_dk1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtL_NLMK_dk1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nhaplaimk"
            android:layout_marginHorizontal="15dp"
            app:startIconDrawable="@drawable/ic_round_lock_24"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editT_NLMK_dk1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_DK1_dk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/dangky"
            android:background="@drawable/bg_button"/>
    </LinearLayout>
</RelativeLayout>