<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ThanhToanAct">

    <include
        android:id="@+id/tool3_ThanhToan"
        layout="@layout/toolbar_option_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool3_ThanhToan"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="Giao hàng đến" />

    <RelativeLayout
        android:id="@+id/relative2_tt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool3_ThanhToan"
        android:layout_marginTop="40dp"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgV_HinhTK_tt"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:src="@drawable/e42419" />

        <TextView
            android:id="@+id/txtV_TenTK_tt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/imgV_HinhTK_tt"
            android:text="Nguyễn Quang Dinh" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtV_TenTK_tt"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/txtV1_tt"
            android:layout_toEndOf="@+id/imgV_HinhTK_tt"
            android:fontFamily="@font/roboto_italic"
            android:maxLines="2"
            android:text="Số 6 Trần Văn Ơn, Phú Hòa, Thủ Dầu Một, Bình Dương" />

        <TextView
            android:id="@+id/txtV1_tt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="Thay đổi" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recV_DsMA_tt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative2_tt"
        android:layout_marginTop="10dp"
        android:background="@color/hifood4"
        android:paddingBottom="5dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recV_Menu_tt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recV_DsMA_tt"
        android:layout_marginTop="10dp" />

    <RelativeLayout
        android:id="@+id/relative3_tt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_DatHang_tt"
        android:layout_marginBottom="30dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/tongDH_tt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/phiVC_tt"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:text="@string/phiVC_tt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tongTien_tt"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:text="@string/tongTien_tt" />

        <TextView
            android:id="@+id/tongDH_tt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="90.000đ" />

        <TextView
            android:id="@+id/phiVC_tt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tongDH_tt"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="20.000đ" />

        <TextView
            android:id="@+id/tongTien_tt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phiVC_tt"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="111.000đ" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_DatHang_tt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_button"
        android:text="@string/dathang" />

</RelativeLayout>