<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.admin.UpTaiKhoan">

    <include
        android:id="@+id/tool3_QLTaiKhoan_Up"
        layout="@layout/include_toolbar_option_1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgV_HinhTK_uptk"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:src="@drawable/khongchu" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Folder_uptk"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="Lấy từ thư mục" />

                <Button
                    android:id="@+id/btn_Camera_uptk"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Lấy từ Camera" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtL_SDT_uptk"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="40dp"
                android:hint="@string/nhapsdt"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editT_SDT_uptk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtL_MatKhau_uptk"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:hint="@string/nhapmk"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editT_MatKhau_uptk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtL_Ten_uptk"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hovaten"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editT_Ten_uptk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtL_ViTri_uptk"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/imgB_LayViTri_uptk"
                    android:enabled="false"
                    android:hint="Địa chỉ">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editT_ViTri_uptk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/imgB_LayViTri_uptk"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/hifood1"
                    android:scaleType="center"
                    android:src="@drawable/ic_round_add_location_alt_24"
                    app:tint="@color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/txtV1_uptk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="Quyền :"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner_Quyen_uptk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/txtV1_uptk"
                    android:background="@android:color/transparent" />
            </RelativeLayout>

<!--            <RelativeLayout-->
<!--                android:id="@+id/relative1_uptk"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginHorizontal="15dp"-->
<!--                android:layout_marginTop="20dp">-->

<!--                <TextView-->
<!--                    android:id="@+id/txtV2_uptk"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:text="Quán ăn:"-->
<!--                    android:textSize="16sp" />-->

<!--                <TextView-->
<!--                    android:id="@+id/txtV_ChonQuanAn_uptk"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_marginStart="10dp"-->
<!--                    android:layout_toEndOf="@+id/txtV2_uptk"-->
<!--                    android:background="@drawable/bg_getdate"-->
<!--                    android:drawableEnd="@drawable/ic_round_arrow_drop_down_24"-->
<!--                    android:padding="10dp"-->
<!--                    android:textSize="16sp" />-->
<!--            </RelativeLayout>-->

            <CheckBox
                android:id="@+id/checkB_KhoaTK_uptk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:text="Khóa tài khoản" />

            <Button
                android:id="@+id/btn_XacNhan_uptk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_button"
                android:text="Xác nhận" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>